<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>techman_robot_utility_scripts</name>
  <version>0.0.0</version>
  <description>Techman robot utils scripts</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license> 
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
