<?xml version="1.0"?>
<package format="2">
  <name>tm_gazebo</name>
  <version>0.0.0</version>
  <description>The ROS2 tm_gazebo package</description>

 
  <maintainer email="leowu@todo.todo">leowu</maintainer>

  <license>TODO</license>
<!-- 
  <url type="repository">https://github.com/AcutronicRobotics/MARA</url>
  <url type="bugtracker">https://github.com/AcutronicRobotics/MARA/issues</url>
-->
  <depend>urdf</depend>
  <buildtool_depend>urdf</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
